--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>testing site</h1>
+
+    <img src="http://placecorgi.com/260/180" alt="cute corgi">
+    <img src="http://placecorgi.com/260/180" alt="cute corgi">
+
 </body>
 </html>
